telemetry/derive/tests/ui_fail/args_no_wsv.stderr
error: At least one argument must be a `StateTransaction` or `StateReadOnly`.
 --> tests/ui_fail/args_no_wsv.rs:4:12
  |
4 | fn execute(_state: &World) -> Result<(), ()> {
  |            ^^^^^^^^^^^^^^
